--- a/tp_diseno/pom.xml
+++ b/tp_diseno/pom.xml
@@ -12,6 +12,11 @@
             <version>42.7.4</version>
         </dependency>
         <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+        <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20210307</version>
